--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,14 +6,12 @@ spring:
     driver-class-name: org.h2.Driver
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
     properties:
       hibernate:
         show_sql: true
         format_sql: true
     open-in-view: true
-  profiles:
-    active: local
   redis:
     host: 192.168.99.100
     port: 6379
