--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,7 +13,8 @@ spring:
         format_sql: true
     open-in-view: true
   redis:
-    host: 192.168.99.100
+    # host: 192.168.99.100
+    host: localhost
     port: 6379
 logging:
   level:
